--- a/Trasher/Trasher/Trasher.csproj
+++ b/Trasher/Trasher/Trasher.csproj
@@ -205,11 +205,22 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807311800099_UpdateContext.cs" />
+    <Compile Include="Migrations\201807311800099_UpdateContext.Designer.cs">
+      <DependentUpon>201807311800099_UpdateContext.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807311810331_AddController.cs" />
+    <Compile Include="Migrations\201807311810331_AddController.Designer.cs">
+      <DependentUpon>201807311810331_AddController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\PickupDay.cs" />
+    <Compile Include="Controllers\PickupDaysController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -238,7 +249,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -282,6 +295,11 @@
     <Content Include="Views\Employees\Details.cshtml" />
     <Content Include="Views\Employees\Edit.cshtml" />
     <Content Include="Views\Employees\Index.cshtml" />
+    <Content Include="Views\PickupDays\Create.cshtml" />
+    <Content Include="Views\PickupDays\Delete.cshtml" />
+    <Content Include="Views\PickupDays\Details.cshtml" />
+    <Content Include="Views\PickupDays\Edit.cshtml" />
+    <Content Include="Views\PickupDays\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -298,6 +316,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201807311800099_UpdateContext.resx">
+      <DependentUpon>201807311800099_UpdateContext.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807311810331_AddController.resx">
+      <DependentUpon>201807311810331_AddController.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
